3/27/19 updates: - Updated 	- PandaOne 	- Kick App - Added 	- Support Dashboard 	- Indoor Soccer Subbing App 	- Calendar App - Refined 	- Styles page 	- argon.css

--- a/about-me.html
+++ b/about-me.html
@@ -132,7 +132,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div>
               <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
                 <div class="card-profile-actions py-4 mt-lg-0">
-                  <a href="https://www.linkedin.com/in/jeffsandersjr" target="_blank" class="btn btn-sm btn-info mr-4">Connect</a>
+                  <!-- <a href="https://www.linkedin.com/in/jeffsandersjr" target="_blank" class="btn btn-sm btn-info mr-4">Connect</a> -->
+                  <a class="btn btn-sm btn-info mr-4" href="https://www.linkedin.com/in/jeffsandersjr" target="_blank" data-toggle="tooltip" title="Connect on LinkedIn">Connect</a>
                   <!-- <a href="#" class="btn btn-sm btn-default float-right">Message</a> -->
                 </div>
               </div>
@@ -154,7 +155,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div>
             </div>
             <div class="text-center mt-5">
-              <h3>Jeff Sanders
+              <h3>Jeff Sanders, Jr.
                 <span class="font-weight-light"></span>
               </h3>
               <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>San Diego, California</div>
