--- a/case/kick-app-2.html
+++ b/case/kick-app-2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Jeff Sanders">
-  <title>Jeff Sanders Jr. - Church & State</title>
+  <title>Jeff Sanders Jr. - Kick App</title>
   <!-- Favicon -->
   <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
@@ -123,7 +123,164 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="card card-body shadow mt--450">
           <div>
             <div class="text-left">
-              <h1 class="display-3">Coming Soon...</h1>
+              <h1 class="display-3">Kick App</h1>
+              <!-- <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>San Diego, California</div>
+              <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Lead Designer</div> -->
+              <div>
+                <span class="badge badge-pill badge-info">UI</span>
+                <span class="badge badge-pill badge-info">UX</span>
+                <span class="badge badge-pill badge-info">IxD</span>
+                <span class="badge badge-pill badge-info">Branding</span>
+              </div>
+            </div>
+            <div class="mt-5 py-5 border-top text-left">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h4>Overview</h4>
+                  <p>Kick App tracks in-game player stats without taking the coach away from the action on the field.</p>
+                </div>
+              </div>
+              <div class="row border-top ">
+                <div class="col-lg-12">
+                  <!-- <h2 class="display-3">Understand</h2> -->
+                  <div class="row justify-content-center">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Going out, seeing for myself, and listening to others provides empathy and context around people and their experiences.">
+                      <span class="btn-inner--text display-3">Understand</span>
+                      <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
+                    </button>
+                  </div>
+                  <h4>Interviews</h4>
+                  <p>I conducted interviews with competitive level players and coaches. I also spoke with players parent to try and uncover hidden challenges that they are facing as they try and help their kids get to the next level.</p>
+                  <h4>Online Surveys</h4>
+                  <p>Taking the insight I received from my interviews I developed a survey with very precise questions to send out to all of my soccer club contacts. The goal of this survey was to create a baseline for where different clubs are as far as keeping players stats.</p>
+                </div>
+              </div>
+              <div class="row border-top ">
+                <div class="col-lg-12">
+                  <!-- <h2 class="display-3">Understand</h2> -->
+                  <div class="row justify-content-center">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="The right measurable outcome is based on understanding the needs, perceptions, and experiences of those we are attempting to serve.">
+                      <span class="btn-inner--text display-3">Define</span>
+                      <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
+                    </button>
+                  </div>
+                  <h4>Problem Statement</h4>
+                  <p>Ameture athletes currently don't have the in-game information they need to take their game to the next level. The majority of teams are only tracking goals scored and sometimes assists.  Currently, players are talking with college and pro recruiters without stats to back up their claims and get them to attend their games.</p>
+                </div>
+              </div>
+              <div class="row border-top ">
+                <div class="col-lg-12">
+                  <!-- <h2 class="display-3">Understand</h2> -->
+                  <div class="row justify-content-center">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Multiple directions are explored, building on one another, to get to unique and desirable solutions.">
+                      <span class="btn-inner--text display-3">Explore</span>
+                      <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
+                    </button>
+                  </div>
+                  <h4>Wireframes</h4>
+                  <p>One way I like to explore possible solutions is through wireframes. The process of wireframing helped to uncover different methods for representing and displaying information as well as prioritizing that content in order of importance to the user, their expectations, and their goals.</p>
+                  <div class="container container-lg">
+                    <div class="row my-3">
+                      <div class="col-md-6 mb-5 mb-md-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/kickapp-wireframes-1.jpg" class="card-img">
+                        </div>
+                      </div>
+                      <div class="col-md-6 mb-5 mb-lg-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/kickapp-wireframes-2.jpg" class="card-img">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row my-3">
+                      <div class="col-md-6 mb-5 mb-md-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/kickapp-wireframes-3.jpg" class="card-img">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="mt-3">
+                    <h4>Iterations</h4>
+                  </div>
+                  <div class="container container-lg">
+                    <div class="row my-3">
+                      <div class="col-md-6 mb-5 mb-md-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/kickapp-wireframes-4.png" class="card-img">
+                        </div>
+                      </div>
+                      <div class="col-md-6 mb-5 mb-lg-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/kickapp-wireframes-5.png" class="card-img">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row my-3">
+                      <div class="col-md-6 mb-5 mb-md-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/kickapp-wireframes-6.png" class="card-img">
+                        </div>
+                      </div>
+                      <div class="col-md-6 mb-5 mb-lg-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/kickapp-wireframes-7.png" class="card-img">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row my-3">
+                      <div class="col-md-6 mb-5 mb-md-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/kickapp-wireframes-8.png" class="card-img">
+                        </div>
+                      </div>
+                      <div class="col-md-6 mb-5 mb-lg-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/kickapp-wireframes-9.png" class="card-img">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="mt-3">
+                    <h4>Color Palette</h4>
+                  </div>
+                  <div class="container container-lg">
+                    <div class="row justify-content-center">
+                      <div class="col-md-9 mb-5 mb-md-0">
+                        <div class="card border-0">
+                          <img src="../case/img/kickapp-colors.png" class="card-img">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="mt-3">
+                    <h4>Prototypes</h4>
+                  </div>
+                  <p>Creating high fidelity prototypes allowed me to explore and experiment with ideas as well as check functionality and usability with real users. After creating the visual design or the website I was able to upload them to
+                    InvisionApp and create a functional prototype to check for any inconsistencies or errors in my design by getting it in front of users.</p>
+                </div>
+              </div>
+              <!-- here -->
+              <div class="row border-top ">
+                <div class="col-lg-12">
+                  <!-- <h2 class="display-3">Understand</h2> -->
+                  <div class="row justify-content-center">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Testing an idea with minimal resources will lead to a better understanding of the problem and the impact your solutions might have more quickly.">
+                      <span class="btn-inner--text display-3">Create</span>
+                      <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
+                    </button>
+                  </div>
+                  <div class="container container-lg">
+                    <div class="row justify-content-center">
+                      <div class="col-md-12 mb-5 mb-md-0">
+                        <div class="card border-0 shadow">
+                          <img src="../case/img/kickapp-final.png" class="card-img">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
