--- a/case/pandaone.html
+++ b/case/pandaone.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Jeff Sanders">
-  <title>Jeff Sanders Jr. - Church & State</title>
+  <title>Jeff Sanders Jr. - PandaOne</title>
   <!-- Favicon -->
   <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
@@ -17,13 +17,13 @@
   <link type="text/css" href="../assets/css/argon.css?v=1.0.1" rel="stylesheet">
   <!-- Docs CSS -->
   <link type="text/css" href="../assets/css/docs.min.css" rel="stylesheet">
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-N2ZHDPF');</script>
-<!-- End Google Tag Manager -->
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
@@ -123,7 +123,167 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="card card-body shadow mt--450">
           <div>
             <div class="text-left">
-              <h1 class="display-3">Coming Soon...</h1>
+              <h1 class="display-3">PandaOne</h1>
+              <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>Salt Lake City, Utah</div>
+              <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Lead Designer</div>
+              <div>
+                <span class="badge badge-pill badge-success">UI</span>
+                <span class="badge badge-pill badge-success">UX</span>
+                <span class="badge badge-pill badge-success">IxD</span>
+              </div>
+            </div>
+            <div class="mt-5 py-5 border-top text-left">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h4>What is PandaOne?</h4>
+                  <p>PandaOne is designed to help support agents pull up Institutions information faster on Phone calls and Chats.</p>
+                </div>
+              </div>
+              <div class="row border-top ">
+                <div class="col-lg-12">
+                  <!-- <h2 class="display-3">Understand</h2> -->
+                  <div class="row justify-content-center">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Going out, seeing for myself, and listening to others provides empathy and context around people and their experiences.">
+                      <span class="btn-inner--text display-3">Understand</span>
+                      <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
+                    </button>
+                  </div>
+                  <h4>Interviews</h4>
+                  <p>I conducted several interviews with key members of the customer support team in order to gain a deeper understanding of their needs and challenges. Combining this with the time I took to observe many customer interactions I was
+                    able to gain a very deep understanding of the customer support agents pain points.</p>
+                </div>
+                <div class="container container-lg">
+                  <div class="row justify-content-center">
+                    <div class="col-md-9 mb-5 mb-md-0">
+                      <div class="card shadow border-0">
+                        <img style="padding: 1em;" src="../case/img/pandaone-old-process.png" class="card-img">
+                      </div>
+                    </div>
+                    <p class="my-md-3">How customer support agents currently pull up information needed for incoming calls and chats.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="row border-top ">
+                <div class="col-lg-12">
+                  <!-- <h2 class="display-3">Understand</h2> -->
+                  <div class="row justify-content-center">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="The right measurable outcome is based on understanding the needs, perceptions, and experiences of those we are attempting to serve.">
+                      <span class="btn-inner--text display-3">Define</span>
+                      <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
+                    </button>
+                  </div>
+                  <h4>Problem Statement</h4>
+                  <p>Customer support agents have a list of items they have to look up for each caller that calls in, but they don't know which Institution they are from until they receive the call. This presents that customer service agent with a
+                    huge dilemma. Do they ask the caller to wait while they open up the needed databases to help them from three-plus locations or they multitask and possibly miss important information the customer is trying to tell them that could
+                    shorten the time it would take to help them?</p>
+                </div>
+              </div>
+              <div class="row border-top ">
+                <div class="col-lg-12">
+                  <!-- <h2 class="display-3">Understand</h2> -->
+                  <div class="row justify-content-center">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Multiple directions are explored, building on one another, to get to unique and desirable solutions.">
+                      <span class="btn-inner--text display-3">Explore</span>
+                      <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
+                    </button>
+                  </div>
+                  <h4>Wireframes</h4>
+                  <p>One way I like to explore possible solutions is through wireframes. The process of wireframing helped to uncover different methods for representing and displaying information as well as prioritizing that content in order of
+                    importance to the user, their expectations, and their goals.</p>
+                  <div class="container container-lg">
+                    <div class="row">
+                      <div class="col-md-6 mb-5 mb-md-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/pandaone-wireframes.jpg" class="card-img">
+                        </div>
+                      </div>
+                      <div class="col-md-6 mb-5 mb-lg-0">
+                        <div class="card shadow border-0">
+                          <img src="../case/img/pandaone-wireframes-2.png" class="card-img">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="mt-3">
+                    <h4>Color Palette</h4>
+                  </div>
+                  <div class="container container-lg">
+                    <div class="row justify-content-center">
+                      <div class="col-md-9 mb-5 mb-md-0">
+                        <div class="card shadow border-0">
+                          <img style="padding: 1em;" src="../case/img/pandaone-colors.png" class="card-img">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="mt-3">
+                    <h4>Prototypes</h4>
+                  </div>
+                  <p>Creating high fidelity prototypes allowed me to explore and experiment with ideas as well as check functionality and usability with real users. After creating the visual design or the website I was able to upload them to
+                    InvisionApp and create a functional prototype to check for any inconsistencies or errors in my design by getting it in front of users.</p>
+                </div>
+              </div>
+              <!-- here -->
+              <div class="row border-top ">
+                <div class="col-lg-12">
+                  <!-- <h2 class="display-3">Understand</h2> -->
+                  <div class="row justify-content-center">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Testing an idea with minimal resources will lead to a better understanding of the problem and the impact your solutions might have more quickly.">
+                      <span class="btn-inner--text display-3">Create</span>
+                      <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
+                    </button>
+                  </div>
+                  <div class="container container-lg">
+                    <div class="row justify-content-center">
+                      <div class="col-md-9 mb-5 mb-md-0">
+                        <div class="card shadow border-0">
+                          <img style="padding: 1em;" src="../case/img/pandaone-new-process.png" class="card-img">
+                        </div>
+                      </div>
+                      <p class="my-md-3">How customer support agents pull up information for incoming calls and chats using my solution.</p>
+                    </div>
+                  </div>
+                  <div class="mt-3 text-center">
+                    <h4>Final Solution</h4>
+                  </div>
+                  <div class="container container-lg my-3">
+                    <div class="row justify-content-center">
+                      <div class="col-md-12 mb-5 mb-md-0">
+                        <div class="card border-0 shadow">
+                          <img src="../case/img/pandaone-solution-1.png" class="card-img p-3">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="container container-lg my-3">
+                    <div class="row justify-content-center">
+                      <div class="col-md-12 mb-5 mb-md-0">
+                        <div class="card border-0 shadow">
+                          <img src="../case/img/pandaone-solution-2.png" class="card-img p-3">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="container container-lg my-3">
+                    <div class="row justify-content-center">
+                      <div class="col-md-12 mb-5 mb-md-0">
+                        <div class="card border-0 shadow">
+                          <img src="../case/img/pandaone-solution-3.png" class="card-img p-3">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="container container-lg my-3">
+                    <div class="row justify-content-center">
+                      <div class="col-md-12 mb-5 mb-md-0">
+                        <div class="card border-0 shadow">
+                          <img src="../case/img/pandaone-solution-4.png" class="card-img p-3">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
