--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </h1>
                 <p class="lead  text-white"></p>
                 <div class="btn-wrapper">
-                  <a href="/about-me.html" class="btn btn-white btn-icon mb-3 mb-sm-0">
+                  <a href="/about-me.html" class="btn btn-white btn-icon mb-3 mb-sm-0" style="z-index: 5">
                     <span class="btn-inner--text">Learn more about me</span>
                     <span class="btn-inner--icon">
                       <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
@@ -143,7 +143,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </section>
       <!-- 1st Hero Variation -->
     </div>
-    <section class="section section-lg pt-lg-0 mt--200">
+    <section class="section section-lg pt-lg-0 mt--250">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -157,7 +157,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <i class="ni ni-istanbul"></i>
                       </div> -->
                       <h6 class="text-primary text-uppercase">Church & State</h6>
-                      <p class="description mt-3">Church & State is a no-strings-attached business incubator for the community to use and build.</p>
+                      <p class="text-muted mt-3">Church & State is a no-strings-attached business incubator for the community to use and build.</p>
                       <div>
                         <span class="badge badge-pill badge-primary">UI</span>
                         <span class="badge badge-pill badge-primary">UX</span>
@@ -176,14 +176,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <!-- <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
                         <i class="ni ni-istanbul"></i>
                       </div> -->
-                      <h6 class="text-primary text-uppercase">PandaOne</h6>
-                      <p class="description mt-3">PandaOne is designed to help support agents pull up Institutions information faster on Phone calls and Chats.</p>
+                      <h6 class="text-success text-uppercase">PandaOne</h6>
+                      <p class="mt-3 text-muted">PandaOne helps support agents pull up Institutions information faster on Phone calls and Chats.</p>
                       <div>
-                        <span class="badge badge-pill badge-primary">UI</span>
-                        <span class="badge badge-pill badge-primary">UX</span>
-                        <span class="badge badge-pill badge-primary">Interaction Design</span>
+                        <span class="badge badge-pill badge-success">UI</span>
+                        <span class="badge badge-pill badge-success">UX</span>
+                        <span class="badge badge-pill badge-success">Interaction Design</span>
                       </div>
-                      <button class="btn btn-primary mt-4">Learn more</button>
+                      <button class="btn btn-success mt-4">Learn more</button>
                     </div>
                   </div>
                 </a>
@@ -196,20 +196,82 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <!-- <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
                         <i class="ni ni-istanbul"></i>
                       </div> -->
-                      <h6 class="text-primary text-uppercase">Kick App 2.0</h6>
-                      <p class="description mt-3">Kick App tracks in-game player stats without taking the coach away from the action on the field.</p>
+                      <h6 class="text-info text-uppercase">Kick App</h6>
+                      <p class="mt-3 text-muted">Kick App tracks in-game player stats without taking the coach away from the action on the field.</p>
                       <div>
-                        <span class="badge badge-pill badge-primary">UI</span>
-                        <span class="badge badge-pill badge-primary">UX</span>
-                        <span class="badge badge-pill badge-primary">Interaction Design</span>
+                        <span class="badge badge-pill badge-info">UI</span>
+                        <span class="badge badge-pill badge-info">UX</span>
+                        <span class="badge badge-pill badge-info">Interaction Design</span>
                       </div>
-                      <button class="btn btn-primary mt-4">Learn more</button>
+                      <button class="btn btn-info mt-4">Learn more</button>
                     </div>
                   </div>
                 </a>
               </div>
             </div>
           </div>
+        </div>
+        <div class="row row-grid my-3">
+          <div class="col-lg-4">
+            <a href="./case/support-dashboard.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="./case/img/support-dashboard-cover.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">Support Dashboard</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a href="./case/indoor-soccer-subbing-app.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="./case/img/indoor-soccer-subbing-app-cover.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">Indoor Soccer Subbing App</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a href="./case/calendar-app.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="./case/img/calendar-app-cover.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">Calendar App</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- <div class="col-lg-4">
+            <a href="./chlg_onoff-switch.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="./img/onoff-switch-thumb.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">On / Off Switch</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div> -->
         </div>
       </div>
     </section>
