Removing redundant 'learn more' calls to action from homepage. Giving the 'learn more about me' more visual prominence.

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <span class="badge badge-pill badge-primary">UX</span>
                         <span class="badge badge-pill badge-primary">IA</span>
                       </div>
-                      <button class="btn btn-primary mt-4">Learn more</button>
+                      <button class="btn btn-primary mt-4 d-lg-none">Learn more</button>
                     </div>
                   </div>
                 </a>
@@ -183,7 +183,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <span class="badge badge-pill badge-success">UX</span>
                         <span class="badge badge-pill badge-success">Interaction Design</span>
                       </div>
-                      <button class="btn btn-success mt-4">Learn more</button>
+                      <button class="btn btn-success mt-4 d-lg-none">Learn more</button>
                     </div>
                   </div>
                 </a>
@@ -203,7 +203,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <span class="badge badge-pill badge-info">UX</span>
                         <span class="badge badge-pill badge-info">Interaction Design</span>
                       </div>
-                      <button class="btn btn-info mt-4">Learn more</button>
+                      <button class="btn btn-info mt-4 d-lg-none">Learn more</button>
                     </div>
                   </div>
                 </a>
